# quoniam

./: .appveyor.yml  .bazelrc  .bazelversion  .gitignore  CONTRIBUTING.md  Doxyfile  MODULE.bazel  Quoniam.cppcheck  Quoniam.pro  README.md  WORKSPACE  WORKSPACE.bzlmod  opencv_dependency.pri  qt_installation.pri
config/: BUILD
dependencies/: versions.txt
dependencies/assimp/: BUILD  assimp_dependency.pri
dependencies/catch2/: BUILD
dependencies/glew/: BUILD  glew_dependency.pri
dependencies/glm/: BUILD  (+1 more)
documentation/: Doxyfile  Quoniam.vpp
inc/: DutagaciDialog.h  MainModuleController.h  MainWindow.h  Measure.h  ModuleTabWidget.h  ProjectedAreasMatrix.h  SceneInformationBuilder.h  SphereOfViewpoints.h  SpherePointCloud.h  Tools.h  ViewpointMeasureSlider.h
installer/: Quoniam-x64.iss  Readme.md
shaders/: BUILD  Basic.vert  ColorPerFace.frag  DualPeelingBlend.frag  DualPeelingFinal.frag  DualPeelingInit.frag  DualPeelingPeel.frag  DualPeelingPeel.vert  ShadeFragment.frag  ShadePerVertexColor.frag  ThermalScale.frag
src/: BUILD  DutagaciDialog.cpp  DutagaciDialog.h  DutagaciView.ui  Main.cpp  MainModule.ui  MainModuleController.cpp  MainModuleController.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Measure.cpp  Measure.h  ModuleController.cpp  ModuleController.h  ModuleTabWidget.cpp  ModuleTabWidget.h  ProjectedAreasMatrix.cpp  ProjectedAreasMatrix.h  SceneInformationBuilder.cpp  SceneInformationBuilder.h  SphereOfViewpoints.cpp  SphereOfViewpoints.h  SpherePointCloud.cpp  SpherePointCloud.h  Tools.cpp  Tools.h  ViewpointMeasureSlider.cpp  ViewpointMeasureSlider.h
toolchain/: BUILD  cc_toolchain_config.bzl
(+807 files in other folders)
