bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "rules_python", version = "1.3.0")
bazel_dep(name = "rules_pkg", version = "1.1.0")

bazel_dep(name = "glm", version = "0.9.9.8")
bazel_dep(name = "glew", version = "2.2.0")

bazel_dep(name = "catch2", version = "3.8.1")
